--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -288,10 +288,6 @@
                                 <action selector="restorePurchasesButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X8x-QQ-mca"/>
                             </connections>
                         </button>
-                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="QPN-sN-Gd3">
-                            <rect key="frame" x="16" y="47" width="20" height="20"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </activityIndicatorView>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="productDescription" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="byh-7S-UoE">
                             <rect key="frame" x="15" y="111.5" width="304" height="21.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -341,6 +337,9 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="w69-In-cCQ">
+                            <rect key="frame" x="157" y="569" width="20" height="20"/>
+                        </activityIndicatorView>
                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeR-hg-4yU">
                             <rect key="frame" x="224" y="489" width="95" height="30"/>
                             <state key="normal" title="Privacy Policy"/>
@@ -350,9 +349,8 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                                 </segue>
                             </connections>
                         </button>
-                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="w69-In-cCQ">
-                            <rect key="frame" x="157" y="569" width="20" height="20"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="QPN-sN-Gd3">
+                            <rect key="frame" x="157" y="292" width="20" height="20"/>
                         </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -362,11 +360,14 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                         <constraint firstItem="NeR-hg-4yU" firstAttribute="top" secondItem="uiG-iR-XDK" secondAttribute="bottom" id="2fC-OX-B9a"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="uiG-iR-XDK" secondAttribute="trailing" constant="15" id="4UV-Sz-egF"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="NeR-hg-4yU" secondAttribute="trailing" constant="15" id="8jo-0V-kLy"/>
+                        <constraint firstItem="QPN-sN-Gd3" firstAttribute="centerX" secondItem="TsE-6t-Suf" secondAttribute="centerX" id="92w-JO-eZd"/>
                         <constraint firstItem="Mth-Gp-ojG" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="Aju-QD-iZF"/>
                         <constraint firstItem="U0u-N9-2VF" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="KxR-a7-5AG"/>
                         <constraint firstItem="byh-7S-UoE" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="O7k-w2-UoA"/>
                         <constraint firstItem="U0u-N9-2VF" firstAttribute="top" secondItem="uiG-iR-XDK" secondAttribute="bottom" id="RHd-d5-SuU"/>
+                        <constraint firstItem="QPN-sN-Gd3" firstAttribute="centerY" secondItem="TsE-6t-Suf" secondAttribute="centerY" id="RL7-Co-71X"/>
                         <constraint firstItem="Dsb-dm-pJ3" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" id="RMT-h4-4Sr"/>
+                        <constraint firstItem="w69-In-cCQ" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="157" id="S5b-zN-5N0"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="byh-7S-UoE" secondAttribute="trailing" constant="15" id="SZb-bG-uGe"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="bottom" secondItem="Dsb-dm-pJ3" secondAttribute="bottom" id="TOJ-MO-Sar"/>
                         <constraint firstItem="XRy-cm-sUN" firstAttribute="top" secondItem="byh-7S-UoE" secondAttribute="bottom" constant="15" id="W3p-Js-oAN"/>
@@ -376,6 +377,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="BnQ-pP-luN" secondAttribute="trailing" constant="20" id="YVx-lc-orx"/>
                         <constraint firstItem="uiG-iR-XDK" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="beB-9x-G1g"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="Mth-Gp-ojG" secondAttribute="trailing" constant="15" id="eaw-oi-9ED"/>
+                        <constraint firstItem="SEO-4a-SWf" firstAttribute="bottom" secondItem="w69-In-cCQ" secondAttribute="bottom" constant="15" id="ffw-2k-SrE"/>
                         <constraint firstItem="Sxj-bO-6OP" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="fii-fr-JxF"/>
                         <constraint firstItem="uiG-iR-XDK" firstAttribute="top" secondItem="Mth-Gp-ojG" secondAttribute="bottom" constant="5" id="gVa-s8-hYG"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="XRy-cm-sUN" secondAttribute="trailing" constant="15" id="hfw-XW-Tbo"/>
@@ -384,6 +386,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                         <constraint firstItem="IcH-NL-7f0" firstAttribute="leading" secondItem="SEO-4a-SWf" secondAttribute="leading" constant="15" id="pDl-kZ-kOG"/>
                         <constraint firstItem="vci-to-dX8" firstAttribute="top" secondItem="IcH-NL-7f0" secondAttribute="bottom" constant="30" id="tTr-L2-qgE"/>
                         <constraint firstItem="Mth-Gp-ojG" firstAttribute="top" secondItem="Sxj-bO-6OP" secondAttribute="bottom" constant="15" id="uOu-Dp-4D5"/>
+                        <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="w69-In-cCQ" secondAttribute="trailing" constant="157" id="vcE-I4-SHF"/>
                         <constraint firstItem="SEO-4a-SWf" firstAttribute="trailing" secondItem="IcH-NL-7f0" secondAttribute="trailing" constant="15" id="xnR-xj-H8X"/>
                         <constraint firstItem="Sxj-bO-6OP" firstAttribute="top" secondItem="XRy-cm-sUN" secondAttribute="bottom" constant="15" id="zKL-kV-PWN"/>
                         <constraint firstAttribute="trailing" secondItem="vci-to-dX8" secondAttribute="trailing" constant="15" id="zm0-Jv-dYa"/>
